tests/failure/not_generic.stderr
error: expected a generic trait
  --> $DIR/not_generic.rs:12:6
   |
12 | impl T for A {
   |      ^
